fix: hero fix carousel z-index

--- a/components/MiniCarousel/index.module.scss
+++ b/components/MiniCarousel/index.module.scss
@@ -44,6 +44,7 @@
     height: auto;
     position: absolute;
     bottom: 0;
+    z-index: 1;
 
     .title {
       padding: 0;
